# opencv_contrib

modules/surface_matching/: .gitignore
modules/surface_matching/samples/serialization/: .gitignore  CMakeLists.txt  input-model.ply  input-scene.ply  para6700PCTrans.ply  serialization  serialization.cpp
modules/surface_matching/src/: ppf_match_3d.cpp
